<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.chua.midtermexam.Stopwatch.StopwatchFragment"
    tools:layout_editor_absoluteY="81dp">
    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/hr"
        android:textColor="@android:color/background_dark"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/colon"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/minute"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/colon" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minute"
        android:textColor="@android:color/background_dark"
        android:textSize="72sp"
        app:layout_constraintEnd_toStartOf="@+id/seconds"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/min" />

    <TextView
        android:id="@+id/colon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/colon"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/seconds"
        app:layout_constraintStart_toEndOf="@+id/minute"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/second"
        android:textColor="@android:color/background_dark"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sec" />

    <TextView
        android:id="@+id/h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:alpha="51"
        android:text="@string/h"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour"
        tools:text="@string/h" />

    <TextView
        android:id="@+id/m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="32dp"
        android:alpha="51"
        android:text="@string/m"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/h"
        app:layout_constraintTop_toBottomOf="@+id/minute" />

    <TextView
        android:id="@+id/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="32dp"
        android:alpha="51"
        android:text="@string/s"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/m"
        app:layout_constraintTop_toBottomOf="@+id/seconds" />

    <TextView
        android:id="@+id/milli_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zero"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m"
        tools:text="@string/ms" />

    <ImageButton
        android:id="@+id/btnStart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milli_second"
        app:srcCompat="@drawable/ic_start" />

    <ImageButton
        android:id="@+id/btnStop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/milli_second"
        app:srcCompat="@drawable/ic_stop" />

</android.support.constraint.ConstraintLayout>